Add background image emoji + styling

--- a/src/App.sass
+++ b/src/App.sass
@@ -1,2 +1,6 @@
 $primary: #00cded
 @import "~bulma"
+.hero-foo
+  @extend .hero
+  background-image: url('../src/avatar.jpeg')
+  background-size: cover
