--- a/src/App.sass
+++ b/src/App.sass
@@ -1,5 +1,12 @@
 $primary: #00cded
+$button-focus-border-color: #363636
+$link: #363636
+$button-background-color: rgba(0,0,0,0)
+$button-hover-border-color: #363636
+$button-border-color	: #363636
+$button-border-width: 2px
 @import "~bulma"
+@import "src/components/Utils/spacing"
 .hero-foo
   @extend .hero
   background-image: url('../src/avatar.jpeg')
