--- a/src/components/Utils/hero.footer.link.css
+++ b/src/components/Utils/hero.footer.link.css
@@ -3,6 +3,11 @@
     animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 
+.button {
+    white-space: pre-wrap;
+    height: 100%;
+}
+
 @-webkit-keyframes text-focus-in {
     0% {
         -webkit-filter: blur(12px);
