Minor bug fixes

--- a/src/App.sass
+++ b/src/App.sass
@@ -7,7 +7,7 @@ $button-border-color	: #363636
 $button-border-width: 2px
 @import "~bulma"
 @import "src/components/Utils/spacing"
-.hero-foo
+.hero-bg
   @extend .hero
   background-image: url('../src/avatar.jpeg')
   background-size: cover
