--- a/src/components/Utils/hero.footer.link.css
+++ b/src/components/Utils/hero.footer.link.css
@@ -2,11 +2,13 @@
     -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
     animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
-
-.button {
-    white-space: pre-wrap;
-    height: 100%;
+@media only screen and (max-width: 600px) {
+    .button {
+        white-space: pre-wrap;
+        height: auto;
+    }
 }
+
 
 @-webkit-keyframes text-focus-in {
     0% {
